# hagane-old

./: Cargo.toml  LICENSE  README.md
docs/: langref.md
src/: codegen.rs  error.rs  file.rs  lexer.rs  main.rs  parser.rs  program_main.c
src/codegen/: mod.rs  primitives.rs  util.rs
tests/: argv.hgn  array.hgn  array_bounds_get.hgn  array_bounds_get_neg.hgn  array_bounds_pop.hgn  array_bounds_put.hgn  array_bounds_put_neg.hgn  array_identity.hgn  array_nested.hgn  block_expr_in_braces.hgn  capture_mut.hgn  char_literal.hgn  comment.hgn  cond.hgn  cond_fail.hgn  fib.hgn  first_indent.hgn  function.hgn  function_type.hgn  global_function.hgn  if_.hgn  if_1.hgn  if_2.hgn  if_3.hgn  if_nested.hgn  if_nested_1.hgn  if_nested_2.hgn  if_nested_3.hgn  if_nested_4.hgn  if_nested_5.hgn  if_nested_6.hgn  if_nested_7.hgn  if_nested_8.hgn  let_polymorphic.hgn  let_tuple.hgn  let_variant.hgn  let_variant_fail.hgn  list_literal.hgn  local_function.hgn  match_int.hgn  (+16 more)
