[package]
name = "hagane"
version = "0.1.0"
authors = ["Yuri Rider Sarah <yuri-rider-sarah@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llvm-sys = "100.2.0"
unic-ucd-category = "0.9.0"
unic-ucd-common = "0.9.0"
